# pydantic-ai-rag

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/components/chunking/: chunking.py
src/components/db/: db_setup.py
src/components/doc_handler/: doc_handler.py
src/components/rag_agent/: rag.py
src/db/: db.py
src/routes/: db_router.py  rag_router.py
src/schemas/: ChunkSchema.py  QuestionRequestSchema.py
test-uploads/: cv.txt
