[project]
name = "pydantic-ai-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pdfplumber>=0.11.6",
    "pydantic-ai>=0.0.52",
    "pyrseas>=0.10.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
